--- a/gogs/Dockerfile
+++ b/gogs/Dockerfile
@@ -3,4 +3,4 @@ FROM gogs/gogs:latest
 #RUN apt-get update && apt-get install -y wget
 RUN wget https://github.com/jwilder/dockerize/releases/download/v0.1.0/dockerize-linux-amd64-v0.1.0.tar.gz
 RUN tar -C /usr/local/bin -xzvf dockerize-linux-amd64-v0.1.0.tar.gz
-RUN dockerize -wait db:5432
+#RUN dockerize -wait tcp://db:5432
