--- a/postgres/Dockerfile
+++ b/postgres/Dockerfile
@@ -1,3 +1,4 @@
 FROM postgres
 
-ADD init-db.sh /docker-entrypoint-initdb.d/
+add init-drone.sh /docker-entrypoint-initdb.d/
+ADD init-gogs.sh /docker-entrypoint-initdb.d/
