--- a/postgres/Dockerfile
+++ b/postgres/Dockerfile
@@ -1,4 +1,4 @@
 FROM postgres
 
-add init-drone.sh /docker-entrypoint-initdb.d/
+ADD init-drone.sh /docker-entrypoint-initdb.d/
 ADD init-gogs.sh /docker-entrypoint-initdb.d/
