mostly configured proxy

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,16 +21,16 @@ http {
                       application/atom+xml;
 
     # List of application servers
-    upstream app_servers {
-
+    upstream drone{
         server drone:8000;
-
     }
 
+    upstream gogs{
+        server gogs:3000;
+    }
 
     server {
-        listen 80;
-        
+        server_name drone.kryptn.com;
 
         location / {
             proxy_set_header X-Real-IP $remote_addr;
@@ -38,7 +38,25 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header Host $http_host;
             proxy_set_header Origin "";
-            proxy_pass http://drone:8000;
+            proxy_pass http://drone;
+            proxy_redirect off;
+            proxy_http_version 1.1;
+            proxy_buffering off;
+
+            chunked_transfer_encoding off;
+        }
+    }
+
+    server {
+        server_name git.kryptn.com;
+
+        location / {
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $remote_addr;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Host $http_host;
+            proxy_set_header Origin "";
+            proxy_pass http://gogs;
             proxy_redirect off;
             proxy_http_version 1.1;
             proxy_buffering off;
