--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -29,6 +29,15 @@ http {
         server gogs:3000;
     }
 
+
+    server {
+        server_name kryptn.com;
+        location / {
+            return 404;
+        }
+
+    }
+
     server {
         server_name drone.kryptn.com;
 
