--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,7 @@ version: '2'
 
 services:
     db:        
-        build:
-          context: ./postgres
+        build: postgres
         env_file: environment
         volumes:
           - ./postgres:/usr/bin
@@ -14,9 +13,8 @@ services:
           - ./gogs:/data
         env_file: environment
         restart: always
-        #ports:
-        #  - "31337:3000"
-          #- "22:22"
+        ports:
+          - "2022:22"
         depends_on:
           - db
 
@@ -27,8 +25,6 @@ services:
           - /var/run/docker.sock:/var/run/docker.sock
         env_file: environment 
         restart: always
-        #ports:
-        #  - "31338:8000"
         depends_on:
           - db
           - gogs
